--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.3",
+    "chart.js": "^4.5.0",
+    "papaparse": "^5.5.3",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.7",
     "vue": "^3.5.18"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
     "@types/node": "^22.16.5",
+    "@types/papaparse": "^5.3.16",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
